Modules/LancetHardwareDevice/DianaApi/include/DianaApiCommon.h

DIANA_API int setLastError(int e, /*IN*/ const char *strIpAddress = "");
DIANA_API int getLastWarning(const char *strIpAddress = "");
DIANA_API int setLastWarning(int e, /*IN*/ const char *strIpAddress = "");
DIANA_API int getLinkState(const char *strIpAddress = "");
DIANA_API int getTcpForce(/*OUT[6]*/ double *forces, /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointForce(/*OUT[7]*/ double *forces, /*IN*/ const char *strIpAddress = "");
DIANA_API bool isCollision(const char *strIpAddress = "");
DIANA_API int initDHCali(/*IN[3*nrSets]*/ double *tcpMeas, /*IN[7*nrSets]*/ double *jntPosMeas,
                         /*[IN]*/ unsigned int nrSets, /*IN*/ const char *strIpAddress = "");
DIANA_API int getDHCaliResult(/*OUT[4*7]*/ double *rDH, /*OUT[6]*/ double *wRT,
                              /*OUT[3]*/ double *tRT,
                              /*OUT[2]*/ double *confid, /*IN*/ const char *strIpAddress = "");
DIANA_API int setDH(/*IN[7]*/ double *a, /*IN[7]*/ double *alpha, /*IN[7]*/ double *d,
                    /*IN[7]*/ double *theta,
                    /*IN*/ const char *strIpAddress = "");
DIANA_API int setWrd2BasRT(/*IN[6]*/ double *RTw2b, /*IN*/ const char *strIpAddress = "");
DIANA_API int setFla2TcpRT(/*IN[3]*/ double *RTf2t, /*IN*/ const char *strIpAddress = "");
DIANA_API char getRobotState(const char *strIpAddress = "");
DIANA_API int resume(const char *strIpAddress = "");
DIANA_API int setJointCollision(/*IN[7]*/ double *collision, /*IN*/ const char *strIpAddress = "");
DIANA_API int setCartCollision(/*IN[6]*/ double *collision, /*IN*/ const char *strIpAddress = "");
DIANA_API int enterForceMode(/*[IN]*/ int intFrameType,
                             /*IN[16]*/ double *dblFrameMatrix,
                             /*IN[3]*/ double *dblForceDirection,
                             /*[IN]*/ double dblForceValue,
                             /*[IN]*/ double dblMaxApproachVelocity,
                             /*[IN]*/ double dblMaxAllowTcpOffset, /*IN*/ const char *strIpAddress = "");
DIANA_API int leaveForceMode(/*IN*/ int intExitMode, /*IN*/ const char *strIpAddress = "");
DIANA_API int setResultantCollision(/*IN*/ double force, /*IN*/ const char *strIpAddress = "");  // 合力
DIANA_API int setJointImpedance(/*IN[7]*/ double *arrStiff, /*IN[7]*/ double *arrDamp,
                                /*IN*/ const char *strIpAddress = "");
DIANA_API int getJointImpedance(/*OUT[7]*/ double *arrStiff, /*OUT[7]*/ double *arrDamp,
                                /*IN*/ const char *strIpAddress = "");